--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "build": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Donquixote Sabo",
